force-app/main/default/objects/Consumer_Enrollment__c/Consumer_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Consumer_Enrollment</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Consumer_Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer_Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>