force-app/main/default/objects/Consumer_Enrollment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Consumer_Enrollments</relationshipLabel>
    <relationshipName>Consumer_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>