force-app/main/default/objects/Consumer_Enrollment__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <referenceTo>SFDC_Enrollment__c</referenceTo>
    <relationshipLabel>Consumer_Enrollments</relationshipLabel>
    <relationshipName>Consumer_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>