force-app/main/default/objects/Consumer_Enrollment__c/fields/Home_Care_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Home_Care_Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Care Consumer</label>
    <referenceTo>Home_Care_Seeker_Consumer__c</referenceTo>
    <relationshipLabel>Consumer_Enrollments</relationshipLabel>
    <relationshipName>Consumer_Enrollments_Consumer</relationshipName>
    <type>Lookup</type>
</CustomField>