force-app/main/default/objects/Consumer_Enrollment__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer_Enrollments</relationshipLabel>
    <relationshipName>Consumer_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>