force-app/main/default/objects/Consumer_Enrollment__c/fields/Transfer_By__c.field-meta.xml
<CustomField>
    <fullName>Transfer_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Consumer_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>